# agent-skeleton

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: api.md  architecture.md  customize.md  demo.md  evaluation.md  limitations.md  platform_mapping.md  resume_evidence.md  security.md
examples/job_matching/sample_data/: sample_jd.txt  sample_resume.txt
src/: main.py
src/agents/: base.py
src/agents/personas/: __init__.py  job_matcher.py
src/core/: agent_loop.py  config.py  llm_client.py  memory.py  tool_registry.py
src/server/: main.py
src/server/routes/: admin.py  chat.py
src/tools/builtin/: __init__.py
src/tools/business/: __init__.py
src/tools/business/job_matching/: __init__.py  tools.py
src/ui/: index.html  package-lock.json  package.json  tsconfig.json
src/ui/src/: App.tsx
src/ui/src/components/: ChatInput.tsx  ChatMessage.tsx  ToolCallPanel.tsx
src/ui/src/hooks/: useAgentChat.ts
src/ui/src/types/: chat.ts
tests/: test_agent_loop.py  test_builtin_security.py  test_builtin_tools.py  test_chat_api.py  test_job_matching_tools.py  test_llm_client.py  test_tool_registry.py
